--- a/video_subtitles_convertor/mainapp/templates/mainapp/base.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/base.html
@@ -1,3 +1,4 @@
+<!-- Load all static files -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -11,7 +12,8 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="{% static 'authy/ytcss/style.css' %}" />
     <title>
-      <!-- Customize head of document --> {% block title %} {% endblock %}
+      <!-- Customize head of document --> <!-- --> {% block title %} <!-- -->
+      <!-- --> {% endblock %} <!-- -->
     </title>
   </head>
 
