--- a/video_subtitles_convertor/mainapp/templates/mainapp/upload-video.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/upload-video.html
@@ -13,7 +13,7 @@ Upload video
 {% block body %}
 
 <form method="post" enctype="multipart/form-data">
-  <!-- Inject Cross site request foregory token -->
+  <!-- Inject Cross site request foregery token -->
   {% csrf_token %}
   <!--  Render form as p tags -->
   {{ form.as_p }}
