Fixed templates title issue

--- a/video_subtitles_convertor/mainapp/templates/mainapp/base.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/base.html
@@ -11,10 +11,7 @@
     <meta name="topic" content="Fatmug Assignment Submission" />
     <meta name="description" content="" />
     <link rel="stylesheet" href="{% static 'authy/ytcss/style.css' %}" />
-    <title>
-      <!-- Customize head of document --> <!-- --> {% block title %} <!-- -->
-      <!-- --> {% endblock %} <!-- -->
-    </title>
+    <title>{% block title %} {% endblock %}</title>
   </head>
 
   <body>
