--- a/video_subtitles_convertor/mainapp/templates/mainapp/list-subtitles.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/list-subtitles.html
@@ -2,14 +2,10 @@
 <!-- Load custom filters -->
 {% extends 'mainapp/base.html' %} {% load custom_filters %}
 <!--  -->
-<!--  -->
 
 <!-- Customize title  -->
 
-{% block title %} Subtitles List
-<!-- end title -->
-
-{% endblock %}
+{% block title %} Subtitles List {% endblock %}
 
 <!-- Customize body -->
 
