--- a/video_subtitles_convertor/mainapp/templates/mainapp/list-video.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/list-video.html
@@ -5,13 +5,7 @@
 
 <!-- Customize title -->
 
-{% block title %}
-
-<!-- Title -->
-Videos List
-<!-- End title -->
-
-{% endblock %}
+{% block title %} Videos List {% endblock %}
 
 <!-- Customize body -->
 {% block body %}
