--- a/video_subtitles_convertor/mainapp/templates/mainapp/upload-video.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/upload-video.html
@@ -2,12 +2,7 @@
 {% extends 'mainapp/base.html' %}
 
 <!-- Customize Title  -->
-{% block title %}
-<!--  -->
-Upload video
-<!--  -->
-
-{% endblock %}
+{% block title %} Upload video {% endblock %}
 
 <!-- Customize Body -->
 {% block body %}
