:hammer: Refractored some file

--- a/video_subtitles_convertor/mainapp/templates/mainapp/list-subtitles.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/list-subtitles.html
@@ -30,7 +30,7 @@
     width="800px"
     style="margin-bottom: 50px"
     controls
-    preload="metadata"
+    preload="auto"
   >
     <source src="{{ subtitles.video|get_output_url }}" type="video/mp4" />
     <source src="{{ subtitles.video|get_output_url }}" type="video/webm" />
