--- a/video_subtitles_convertor/mainapp/templates/mainapp/list-video.html
+++ b/video_subtitles_convertor/mainapp/templates/mainapp/list-video.html
@@ -23,6 +23,7 @@
     preload="auto"
     style="margin-bottom: 30px; border: 4px solid black"
     controls
+    preload="auto"
   >
     <source src=" {{ video.video_file.url }} " type="video/mp4" />
     <source src=" {{ video.video_file.url }} " type="video/ogg" />
